[gd_scene load_steps=3 format=3 uid="uid://jyv4g54adkmo"]

[ext_resource type="Script" path="res://ui/overlays/PauseOverlay.gd" id="1_q2yda"]
[ext_resource type="PackedScene" uid="uid://nbaodrlopo7y" path="res://ui/components/GameSettings.tscn" id="2_n78uc"]

[node name="PauseOverlay" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2yda")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
offset_left = 195.0
offset_top = 84.0
offset_right = 380.0
offset_bottom = 239.0

[node name="Label" type="Label" parent="VBoxContainer3"]
offset_right = 185.0
offset_bottom = 42.0
theme_type_variation = &"HeaderLarge"
text = "game_paused"
horizontal_alignment = 1

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
visible = false
offset_top = 46.0
offset_right = 648.0
offset_bottom = 219.0

[node name="GameSettings" parent="VBoxContainer3/SettingsContainer" instance=ExtResource("2_n78uc")]
offset_right = 648.0
offset_bottom = 138.0

[node name="BackButton" type="Button" parent="VBoxContainer3/SettingsContainer"]
unique_name_in_owner = true
offset_top = 142.0
offset_right = 648.0
offset_bottom = 173.0
text = "return_to_menu"

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
offset_top = 46.0
offset_right = 185.0
offset_bottom = 155.0
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
offset_right = 185.0
offset_bottom = 31.0
text = "resume_game"

[node name="SettingsButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
offset_top = 39.0
offset_right = 185.0
offset_bottom = 70.0
text = "settings"

[node name="ExitButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
offset_top = 78.0
offset_right = 185.0
offset_bottom = 109.0
text = "leave_game"
